--- a/web/src/index.html
+++ b/web/src/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
+    <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
