--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,10 +7,14 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-    <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../public/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="root"></div>
-    <script src="./index.tsx"></script>
+    <script src="./index.tsx" type="module"></script>
   </body>
 </html>
