--- a/web/index.html
+++ b/web/index.html
@@ -9,12 +9,12 @@
     />
     <link
       rel="shortcut icon"
-      href="../public/favicon.ico"
+      href="./favicon.ico"
       type="image/x-icon"
     />
   </head>
   <body>
     <div id="root"></div>
-    <script src="./index.tsx" type="module"></script>
+    <script src="./src/index.tsx" type="module"></script>
   </body>
 </html>
